# CustomCTkDialog

./: .gitignore  README.md  pyproject.toml  run_build.py  setup.py
CustomCTkDialog/: __init__.py  custom_ctk_dialog.py  electron_loader.py
example/: app.py  requirements.txt
js-file-picker/: package.json
js-folder-picker/: folder-picker.js  package.json
