[build-system]
requires = ["setuptools>=61.0", "wheel", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "CustomCTkDialog"
version = "0.1.2"
description = "A custom dialog component for CustomTkinter"
authors = [
    { name = "AceBurgundy", email = "Samadriansabalo99@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=12.0.0",
    "requests"
]

[project.urls]
Homepage = "https://github.com/AceBurgundy/CustomCTkDialog"
Repository = "https://github.com/AceBurgundy/CustomCTkDialog"

[tool.setuptools.packages.find]
include = ["CustomCTkDialog"]

[tool.setuptools.package-data]
# Include the EXE and any other static files inside your package
CustomCTkDialog = [
    "py.typed",
    "folder-picker-1.0.0.exe",
]
